--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1977,6 +1977,8 @@ a {
   bottom: 0;
   height: 1px;
   background: #ffffff;
+  left: -32px;
+  width: calc(100% + 64px);
 }
 @media (max-width: 767px) {
   .cid-sa6vGT8lx1 .divider {
@@ -1993,7 +1995,7 @@ a {
     text-align: center;
   }
 }
-.cid-tdK7uRNPuB {
+.cid-tdKbqM2ING {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #232323;
